methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:5: error: ';' expected but 'else' found.
  else {backward(stepCount)}
  ^